deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmanager-app
  namespace: "2401041"
  labels:
    app: taskmanager-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskmanager-app
  template:
    metadata:
      labels:
        app: taskmanager-app
    spec:
      containers:
        - name: taskmanager-container
          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/2401041-project/taskmanager-webapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

      imagePullSecrets:
        - name: nexus-secret
